2019-12-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Add internal gobject and widget class comments.
      Add function documentation for geda_accel_label_get_accel_width.

    * src/widgets/geda_combobox.c: Add internal GedaComboBoxClass comments, convert
      container_class and widget_class comment to internal documentation.

    * src/widgets/geda_image_menu_item.c Reorganize module.

2019-12-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Add documentation for geda_accel_label_refetch
      and todo template for geda_accel_label_get_accel_width and reorganize module.

    * tests/test_bulb.c: Add checks for geda_bulb_group_set_active_index.

2019-12-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_entry.c: Rename function geda_entry_activate ->
      geda_entry_process_entry. Add virtual over-ride geda_entry_widget_key_press
      to emit "activate" on the GtkEntry.

    * src/widgets/geda_menu.c: Add internal documentation/comment.

2019-11-04 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro gtk_dialog_get_content_area for Gtk<3.0.

    * src/dialogs/geda_file_chooser.c: Rename macro; ChooseClass -> ChooserClass.
      Utilize gtk_dialog_get_content_area in get_filter_button.

    * src/dialogs/geda_image_chooser.c: Utilize gtk_dialog_get_content_area in
      geda_image_chooser_constructor.

    * tests/test_menu_separator.c: Check response from GedaMenuItem
      accessors:

          * geda_menu_item_get_show_submenu_indicator

2019-10-22 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_bulb.c: Add Doxygen code/endcode tags in
      geda_bulb_set_group documentation. Revise geda_bulb_finalize
      to eliminate redundant emission of the group_changed_signal
      when old_group_singleton and was_in_group are both set by
      only checking was_in_group when old_group_singleton is not